--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,9 +1,11 @@
-.container {
-    background-color: rgb(243, 174, 72);
-    display: grid;
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .weather-parameters {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2em;
+    text-align: center;
     display: flex;
     justify-content: space-around;
 }
