--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,15 +1,36 @@
+$parameter-margin-bottom : 1.5em;
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.input-container {
+    display: grid;
+    grid-template-columns: minmax(200px, 200px) minmax(10px, 1fr) 200px;
+}
+
+#input {
+    font-size: 2em;
+}
+
+#input-label {
+    margin: 0;
 }
 
 .weather-parameters {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
     text-align: center;
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
-#input {
-    font-size: 2em;
+.parameter {
+    grid-area: "parameter";
+    margin-bottom: $parameter-margin-bottom;
+}
+
+.parameter-name {
+    font-weight: bold;
+    margin-bottom: $parameter-margin-bottom / 3;
 }
