--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,7 +6,7 @@ body {
 
 .input-container {
     display: grid;
-    grid-template-columns: minmax(200px, 200px) minmax(10px, 1fr) 200px;
+    grid-template-columns: auto 1fr 1fr;
 }
 
 #input {
