CSS. Add margin for body

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,7 @@ $parameter-margin-bottom : 1.5em;
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 5vh 20vh;
 }
 
 .input-container {
