--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,42 +1,8 @@
-$parameter-margin-bottom : 1.5em;
-$input-font-size : 2em;
+@import "_input.scss";
+@import "_weather.scss";
+
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 5vh 20vh;
-}
-
-.input-container {
-    display: grid;
-    grid-template-columns: auto 1fr 1fr;
-}
-
-#input {
-    font-size: $input-font-size;
-}
-
-#input-label {
-    margin: 0;
-}
-
-#input-button {
-    font-size: $input-font-size;
-}
-
-.weather-parameters {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2em;
-    text-align: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-}
-
-.parameter {
-    grid-area: "parameter";
-    margin-bottom: $parameter-margin-bottom;
-}
-
-.parameter-name {
-    font-weight: bold;
-    margin-bottom: $parameter-margin-bottom / 3;
 }
