CSS. Fix side margins in body

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,6 +42,6 @@
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin: 5vh 20vh;
+  margin: 5vh 10vw;
 }
 /*# sourceMappingURL=styles.css.map */
