templates.weather. Fix description displaying

--- a/templates/weather.hbs
+++ b/templates/weather.hbs
@@ -1,4 +1,4 @@
-<h1>Weather in {{cityName}} is {{main}}</h1>
+<h1>Weather in {{cityName}} is {{description}}</h1>
 <div class="weather-parameters">
 {{#each parameters}}
     <div class="parameter">
