--- a/templates/weather.hbs
+++ b/templates/weather.hbs
@@ -1,10 +1,14 @@
-<h1>Weather in {{cityName}} is {{description}}</h1>
-<div class="weather-parameters">
-{{#each parameters}}
-    <div class="parameter">
-        <img class="parameter-icon" src={{icon}}>
-        <div class="parameter-name">{{name}}</div>
-        <div class="parameter-value">{{value}} {{{units}}}</div>
+{{#if message}}
+    <h1 class="error-message">Error: {{message}}</h1>
+{{else}}
+    <h1>Weather in {{cityName}} is {{description}}</h1>
+    <div class="weather-parameters">
+        {{#each parameters}}
+            <div class="parameter">
+                <img class="parameter-icon" src={{icon}}>
+                <div class="parameter-name">{{name}}</div>
+                <div class="parameter-value">{{value}} {{{units}}}</div>
+            </div>
+        {{/each}}
     </div>
-{{/each}}
-</div>
+{{/if}}
