--- a/styles/_error.scss
+++ b/styles/_error.scss
@@ -1,8 +1,3 @@
-#error-container {
-    background-color: red;
-    border-color: black;
-}
-
 .error-message {
-    color: lightgray;
+    color: red;
 }
