Add displaying not founded city name

--- a/templates/weather.hbs
+++ b/templates/weather.hbs
@@ -1,5 +1,5 @@
 {{#if message}}
-    <h1 class="error-message">Error: {{message}}</h1>
+    <h1 class="error-message">Error: {{message}} ({{cityName}})</h1>
 {{else}}
     <h1>Weather in {{cityName}} is {{description}}</h1>
     <div class="weather-parameters">
