--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,7 @@
 .input-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 #input {
@@ -25,10 +20,8 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.2em;
   text-align: center;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(150px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .parameter {
@@ -40,17 +33,11 @@
   margin-bottom: 0.5em;
 }
 
-#error-container {
-  background-color: red;
-  border-color: black;
-}
-
 .error-message {
-  color: lightgray;
+  color: red;
 }
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 5vh 10vw;
 }
-/*# sourceMappingURL=styles.css.map */
